After upgrading my linter, it now complains about the order of imports :) So fixing that in some files...

--- a/h2o-py/setup.cfg
+++ b/h2o-py/setup.cfg
@@ -5,7 +5,9 @@ ignore=E241,E265,E302,E303,E701
 [flake8]
 max-line-length=120
 ignore = E241,E265,E302,E303,E701
-# exclude = pyunit_*.py
+application-import-names=h2o
+import-order-style=smarkets
+inline-quotes="
 
 [bdist_wheel]
 # This flag says that the code is written to work on both Python 2 and Python
